# release-trader

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .user.cfg.example  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/release_trader/: __init__.py  __main__.py  check_availability.py  config.py  gateio_functions.py  history.txt  open_trade.txt  strategy.py  trade.py  webscaper.py
tests/: __init__.py  test_check_availability.py  test_main.py  test_webscraper.py
