[tool.poetry]
name = "release-trader"
version = "0.0.1"
description = "Release Trader"
authors = ["Eirik Rolland Enger <release.trader@use.startmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/engeir/release-trader"
repository = "https://github.com/engeir/release-trader"
documentation = "https://release-trader.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/engeir/release-trader/releases"

[tool.poetry.dependencies]
python = "^3.9.2"
ccxt = "^1.47.61"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.11.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.2"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.1"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.6.0"
Pygments = "^2.8.1"
nox = "^2020.12.31"

[tool.poetry.scripts]
release-trader = "release_trader.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["release_trader"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
